--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <div class="sidebar">
         <a href="#home"> <i class="home"></i> Home </a>
+        <a href="#Account"> <i class="account"></i> Account</a>
+        <a href="#logout"> <i class="logout"></i> Logout</a>
     </div>
 </body>
 
