--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kickstart | Project</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="kickstart.png">
 </head>
 
 <body>
     <div class="sidebar">
+        <img class="kickstart" src="kickstart.png" alt="kickstart">
+        <h3 id="kickstart">Kickstart</h3>
         <a href="#home"> <i class="home"></i> Home </a>
         <a href="#Account"> <i class="account"></i> Account</a>
         <a href="#logout"> <i class="logout"></i> Logout</a>
+        <a href="#settings"><i class="fas fa-cog"></i>Settings.</a>
     </div>
 </body>
 
