--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
 <body>
     <div class="sidebar">
         <img class="kickstart" src="kickstart.png" alt="kickstart">
-        <h3 id="kickstart">Kickstart</h3>
-        <a href="#home"> <i class="home"></i> Home </a>
-        <a href="#Account"> <i class="account"></i> Account</a>
-        <a href="#logout"> <i class="logout"></i> Logout</a>
-        <a href="#settings"><i class="fas fa-cog"></i>Settings.</a>
+        <h3 id="kickstart">Kickstart | Project</h3>
+        <a href="#home"><span class="icon"><i class="fas fa-home"></i></span> Home </a>
+        <a href="#Account"><span class="icon"><i class="fas fa-user-shield"></i></span> Account</a>
+        <a href="#logout"><span class="icon"><i class="fas fa-system"></i></span> Logout</a>
+        <a href="#settings"><span class="icon"><i class="fas fa-cog"></i></span> Settings.</a>
+    </div>
+    <h1>Man</h1>
+    <div class="section">
+        <div class="top_navbar">
+            <div class="hamburger">
+                <a href="#">
+                    <i class="fas fa-bars"></i>
+                </a>
+            </div>
+        </div>
+
     </div>
 </body>
 
