Kickstart Project was added by Me

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <a href="#logout"><span class="icon"><i class="fas fa-system"></i></span> Logout</a>
         <a href="#settings"><span class="icon"><i class="fas fa-cog"></i></span> Settings.</a>
     </div>
-    <h1>Man</h1>
+
     <div class="section">
         <div class="top_navbar">
-            <div class="hamburger">
+            <div class="Account">
                 <a href="#">
                     <i class="fas fa-bars"></i>
                 </a>
