--- a/Exploring.html
+++ b/Exploring.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <!--  Beginning code For cursor inside a circle  -->
+    <div class='circle'></div>
+    <!-- End of code For cursor inside a circle  -->
+
     <div id="intro">
         <h1 class="world"> <strong> <b> Places Around The World </b> </strong> </h1>
     </div>
@@ -61,6 +66,8 @@
         </ol>
     </div>
     <button style=" background-color: black; "><a href="index.html " id="form " target="_blank ">Apply for a Form</a> </button>
+    <script src="app.js"></script>
+
 </body>
 
 </html>
