--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <!--  Beginning code For cursor inside a circle  -->
+    <div class='circle'></div>
+    <!-- End of code For cursor inside a circle  -->
+
     <section id="section">
         <h1 class="form"><pre>Create A Form</pre> </h1>
 
@@ -60,6 +65,7 @@
             </section>
         </form>
     </section>
+    <script src="app.js"></script>
 </body>
 
 </html>
