--- a/Exploring.html
+++ b/Exploring.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beautiful Places | In the World</title>
-    <link rel="icon" href="./images/cities.jpg" alt="coding images">
+    <title>World</title>
+    <link rel="icon" href="./images/cities.jpg" alt="Logo">
+
+    <!-- Main StyleSheet -->
     <link rel="stylesheet" href="style.css" title="text/css">
 </head>
 
@@ -16,23 +18,15 @@
     <div class='circle'></div>
     <!-- End of code For cursor inside a circle  -->
 
-    <div id="intro">
-        <h1 class="world"> <strong> <b> Places Around The World </b> </strong> </h1>
+    <div class="intro">
+        <h1 class="world"> <b> Places Around The World </b> </h1>
+        <p>There are some<em> Beautiful Places </em>you can't imagine.</p>
     </div>
 
-    <div>
-        <ul>
-            <p>This are some <span> <em> Beautiful Places </em> </span> you can imagine.</p>
-            <li id="europe"> <a href="https://www.busytourist.com/most-beautiful-places-in-the-us" target="_blank"> U.S.A </a> </li>
-            <li> <a href="https://informationngr.com/tourist-vacation-places-nigeria" target="_blank"> Nigeria </a> </li>
-            <li> <a href="https://www.cntraveler.com/galleries/2016-03-31/the-50-most-beautiful-places-in-europe" target="_blank"> Europe </a> </li>
-            <li> <a href="https://www.purewow.com/travel/most-beautiful-places-in-new-york-state" target="_blank"> New York City </a> </li>
-        </ul>
-    </div>
-    <table style="width:100%">
-        <caption id="great">List Of Great Places Around The World.</caption>
+    <table>
+        <h3 id="great">List Of Great Places Around The World. </h3>
         <tr>
-            <th>Countries</th>
+            <th>Country</th>
             <th>Cities</th>
             <th>Mountains</th>
         </tr>
@@ -52,6 +46,15 @@
             <td>Snow</td>
         </tr>
     </table>
+    <div>
+        <ul>
+            <li id="europe"> <a href="https://www.busytourist.com/most-beautiful-places-in-the-us" target="_blank"> U.S.A </a> </li>
+            <li> <a href="https://informationngr.com/tourist-vacation-places-nigeria" target="_blank"> Nigeria </a> </li>
+            <li> <a href="https://www.cntraveler.com/galleries/2016-03-31/the-50-most-beautiful-places-in-europe" target="_blank"> Europe </a> </li>
+            <li> <a href="https://www.purewow.com/travel/most-beautiful-places-in-new-york-state" target="_blank"> New York City </a> </li>
+        </ul>
+    </div>
+
     <div>
         <h3>Others:</h3>
         <ol>
