--- a/Exploring.html
+++ b/Exploring.html
@@ -24,51 +24,85 @@
     </div>
 
     <table>
+        <a href="mailto:idowu.s.adekale@gmail.com" target="_blank" class="message-btn right message">Message Me</a>
         <h3 id="great">List Of Great Places Around The World. </h3>
         <tr>
             <th>Country</th>
-            <th>Cities</th>
+            <th>Link</th>
             <th>Mountains</th>
         </tr>
         <tr>
-            <td> <a href="#europe"> Europe </a></td>
-            <td>New York</td>
+            <td>Europe</td>
+            <td><a href="https://www.cntraveler.com/galleries/2016-03-31/the-50-most-beautiful-places-in-europe" target="_blank"> Europe </a></td>
             <td>Cool</td>
         </tr>
         <tr>
             <td>United Kingdom</td>
-            <td>USA</td>
+            <td> <a href="https://www.planetware.com/england/best-places-to-visit-in-the-uk-eng-1-2.htm" target="_blank"> United Kingdom </a></td>
             <td>Dark</td>
         </tr>
         <tr>
-            <td>Nigeria</td>
-            <td>Dubia</td>
+            <td>U.S.A</td>
+            <td> <a href="https://www.busytourist.com/most-beautiful-places-in-the-us" target="_blank"> U.S.A </a></td>
             <td>Snow</td>
         </tr>
+        <tr>
+            <td>Nigeria</td>
+            <td><a href="https://informationngr.com/tourist-vacation-places-nigeria" target="_blank"> Nigeria </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>New York City</td>
+            <td><a href="https://www.purewow.com/travel/most-beautiful-places-in-new-york-state" target="_blank"> New York City </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Australia</td>
+            <td><a href="" target="_blank"> Australia </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Dublin</td>
+            <td><a href="" target="_blank"> Dublin </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Dubia</td>
+            <td><a href="" target="_blank"> Dubia </a></td>
+            <td>Snow</td>
+        </tr>
+        <!-- <tr>
+            <td>Dublin</td>
+            <td><a href="" target="_blank"> Dublin </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Dublin</td>
+            <td><a href="" target="_blank"> Dublin </a></td>
+            <td>Snow</td>
+        </tr> -->
     </table>
-    <div>
+    <div class="preview">
         <ul>
             <li id="europe"> <a href="https://www.busytourist.com/most-beautiful-places-in-the-us" target="_blank"> U.S.A </a> </li>
             <li> <a href="https://informationngr.com/tourist-vacation-places-nigeria" target="_blank"> Nigeria </a> </li>
             <li> <a href="https://www.cntraveler.com/galleries/2016-03-31/the-50-most-beautiful-places-in-europe" target="_blank"> Europe </a> </li>
             <li> <a href="https://www.purewow.com/travel/most-beautiful-places-in-new-york-state" target="_blank"> New York City </a> </li>
-        </ul>
-    </div>
-
-    <div>
-        <h3>Others:</h3>
-        <ol>
             <li> <a href="https://www.planetware.com/england/best-places-to-visit-in-the-uk-eng-1-2.htm" target="_blank"> United Kingdom </a> </li>
             <li> <a href="" target="_blank"> Australia </a> </li>
             <li> <a href="" target="_blank"> Dublin </a> </li>
             <li> <a href="" target="_blank"> Dubia </a> </li>
-            <a href="https://www.budgetair.com/en_us/blog/most-beautiful-places-on-earth" target="_blank">Check more-beautiful-places-on-earth</a>
-            <div>
-                <li> <a href="https://www.harpersbazaar.com/culture/travel-dining/g7171/most-beautiful-places-in-the-world" target="_blank">See More</a> </li>
-            </div>
-        </ol>
+        </ul>
     </div>
-    <button style=" background-color: black; "><a href="index.html " id="form " target="_blank ">Apply for a Form</a> </button>
+
+    <div class="access">
+        <h3>Others:</h3>
+        <a href="https://www.budgetair.com/en_us/blog/most-beautiful-places-on-earth" target="_blank" class="message-btn message">Check more-beautiful-places-on-earth</a>
+        <li> <a href="https://www.harpersbazaar.com/culture/travel-dining/g7171/most-beautiful-places-in-the-world" class="message-btn message" target="_blank">See More</a> </li>
+        <button><a href="index.html " id="form " target="_blank ">Apply for a Form</a> </button>
+    </div>
+
+    <!-- MAin JS -->
     <script src="app.js"></script>
 
 </body>
