--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
-    <link rel="icon" href="../Fire and Water.jpg">
+    <link rel="icon" href="./images/ofrmnew.png">
     <link rel="stylesheet" href="site.css" type="text/css">
 </head>
 
@@ -16,55 +16,51 @@
     <div class='circle'></div>
     <!-- End of code For cursor inside a circle  -->
 
-    <section id="section">
-        <h1 class="form"><pre>Create A Form</pre> </h1>
-
-        <form action="http://localhost:5500/api/post" method="post">
-            <section>
-                <label for="firstname">Firstname:</label>
-                <input type="text" id="firstname" name="Firstname">
-                <label for="lastname" id="lastname">Lastname:</label>
-                <input type="text" id="lastname" name="Lastname">
-                <br>
-                <label for="phone-number" id="phone-number">Phone Number:</label>
-                <input type="number" id="phone-number" name="Phone number">
-                <br>
-
-                <label for="age">How old are you?</label>
-                <input type="number" name="age" id="age">
-                <br>
-                <input type="radio" name="gender" id="male" value="Sex">
-                <label for="male">Male</label>
-                <input type="radio" name="gender" id="female" value="Sex">
-                <label for="female">Female</label>
-                <div></div>
-                <section class="country-selection">
-                    <label for="country">Where are you from?</label>
-                    <input type="text" list="countries" id="country" name="country">
-                    <datalist id="countries">
-                        <option value="Nigeria"></option>
-                        <option value="South Africa"></option>
-                        <option value="United State"></option>
-                        <option value="United Kingdom"></option>
-                        <option value="Burkina Faso"></option>
-                        <option value="Ghana"></option>
-                        </datalist>
-                </section>
-                <br>
-                <label for="username">Username:</label>
-                <input type="name" id="username" name="username">
-                <br>
-                <label for="user-password">Password: </label>
-                <input type="password" id="user-password" name="user-password">
-                <br>
-
-                <div>
-                    <button id="form"> <a href="complete.html">Form</a> </button>
+    <div class="container">
+        <form action="https://www.w3schools.com/action_page.php">
+            <div class="row">
+                <h2 style="text-align:center">Login with Social Media or Manually</h2>
+                <div class="vl">
+                    <span class="vl-innertext">or</span>
                 </div>
 
-            </section>
+                <div class="col">
+                    <a href="#" class="fb btn">
+                        <i class="fa fa-facebook fa-fw"></i> Login with Facebook
+                    </a>
+                    <a href="#" class="twitter btn">
+                        <i class="fa fa-twitter fa-fw"></i> Login with Twitter
+                    </a>
+                    <a href="#" class="google btn"><i class="fa fa-google fa-fw">
+                </i> Login with Google+
+              </a>
+                </div>
+
+                <div class="col">
+                    <div class="hide-md-lg">
+                        <p>Or sign in manually:</p>
+                    </div>
+
+                    <input type="text" name="username" placeholder="Username" required>
+                    <input type="password" name="password" placeholder="Password" required>
+                    <input type="submit" value="Login">
+                </div>
+
+            </div>
         </form>
-    </section>
+    </div>
+
+    <div class="bottom-container">
+        <div class="row">
+            <div class="col">
+                <a href="#" style="color:white" class="btn">Sign up</a>
+            </div>
+            <div class="col">
+                <a href="#" style="color:white" class="btn">Forgot password?</a>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
