--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
-    <link rel="icon" href="./images/ofrmnew.png">
-    <link rel="stylesheet" href="site.css" type="text/css">
+    <title>World</title>
+    <link rel="icon" href="./images/cities.jpg" alt="Logo">
+
+    <!-- Main StyleSheet -->
+    <link rel="stylesheet" href="style.css" title="text/css">
 </head>
 
 <body>
@@ -16,52 +18,93 @@
     <div class='circle'></div>
     <!-- End of code For cursor inside a circle  -->
 
-    <div class="container">
-        <form action="https://www.w3schools.com/action_page.php">
-            <div class="row">
-                <h2 style="text-align:center">Login with Social Media or Manually</h2>
-                <div class="vl">
-                    <span class="vl-innertext">or</span>
-                </div>
-
-                <div class="col">
-                    <a href="#" class="fb btn">
-                        <i class="fa fa-facebook fa-fw"></i> Login with Facebook
-                    </a>
-                    <a href="#" class="twitter btn">
-                        <i class="fa fa-twitter fa-fw"></i> Login with Twitter
-                    </a>
-                    <a href="#" class="google btn"><i class="fa fa-google fa-fw">
-                </i> Login with Google+
-              </a>
-                </div>
-
-                <div class="col">
-                    <div class="hide-md-lg">
-                        <p>Or sign in manually:</p>
-                    </div>
-
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <input type="submit" value="Login">
-                </div>
-
-            </div>
-        </form>
+    <div class="intro">
+        <h1 class="world"> <b> Places Around The World </b> </h1>
+        <p>There are some<em> Beautiful Places </em>you can't imagine.</p>
     </div>
 
-    <div class="bottom-container">
-        <div class="row">
-            <div class="col">
-                <a href="#" style="color:white" class="btn">Sign up</a>
-            </div>
-            <div class="col">
-                <a href="#" style="color:white" class="btn">Forgot password?</a>
-            </div>
-        </div>
+    <table>
+        <a href="mailto:idowu.s.adekale@gmail.com" target="_blank" class="message-btn right message">Message Me</a>
+        <h3 id="great">List Of Great Places Around The World. </h3>
+        <tr>
+            <th>Country</th>
+            <th>Link</th>
+            <th>Mountains</th>
+        </tr>
+        <tr>
+            <td>Europe</td>
+            <td><a href="https://www.cntraveler.com/galleries/2016-03-31/the-50-most-beautiful-places-in-europe" target="_blank"> Europe </a></td>
+            <td>Cool</td>
+        </tr>
+        <tr>
+            <td>United Kingdom</td>
+            <td> <a href="https://www.planetware.com/england/best-places-to-visit-in-the-uk-eng-1-2.htm" target="_blank"> United Kingdom </a></td>
+            <td>Dark</td>
+        </tr>
+        <tr>
+            <td>U.S.A</td>
+            <td> <a href="https://www.busytourist.com/most-beautiful-places-in-the-us" target="_blank"> U.S.A </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Nigeria</td>
+            <td><a href="https://informationngr.com/tourist-vacation-places-nigeria" target="_blank"> Nigeria </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>New York City</td>
+            <td><a href="https://www.purewow.com/travel/most-beautiful-places-in-new-york-state" target="_blank"> New York City </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Australia</td>
+            <td><a href="" target="_blank"> Australia </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Dublin</td>
+            <td><a href="" target="_blank"> Dublin </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Dubia</td>
+            <td><a href="" target="_blank"> Dubia </a></td>
+            <td>Snow</td>
+        </tr>
+        <!-- <tr>
+            <td>Dublin</td>
+            <td><a href="" target="_blank"> Dublin </a></td>
+            <td>Snow</td>
+        </tr>
+        <tr>
+            <td>Dublin</td>
+            <td><a href="" target="_blank"> Dublin </a></td>
+            <td>Snow</td>
+        </tr> -->
+    </table>
+    <div class="preview">
+        <ul>
+            <li id="europe"> <a href="https://www.busytourist.com/most-beautiful-places-in-the-us" target="_blank"> U.S.A </a> </li>
+            <li> <a href="https://informationngr.com/tourist-vacation-places-nigeria" target="_blank"> Nigeria </a> </li>
+            <li> <a href="https://www.cntraveler.com/galleries/2016-03-31/the-50-most-beautiful-places-in-europe" target="_blank"> Europe </a> </li>
+            <li> <a href="https://www.purewow.com/travel/most-beautiful-places-in-new-york-state" target="_blank"> New York City </a> </li>
+            <li> <a href="https://www.planetware.com/england/best-places-to-visit-in-the-uk-eng-1-2.htm" target="_blank"> United Kingdom </a> </li>
+            <li> <a href="" target="_blank"> Australia </a> </li>
+            <li> <a href="" target="_blank"> Dublin </a> </li>
+            <li> <a href="" target="_blank"> Dubia </a> </li>
+        </ul>
     </div>
 
+    <div class="access">
+        <h3>Others:</h3>
+        <a href="https://www.budgetair.com/en_us/blog/most-beautiful-places-on-earth" target="_blank" class="message-btn message">Check more-beautiful-places-on-earth</a>
+        <li> <a href="https://www.harpersbazaar.com/culture/travel-dining/g7171/most-beautiful-places-in-the-world" class="message-btn message" target="_blank">See More</a> </li>
+        <button><a href="form.html" id="form " target="_blank ">Apply for a Form</a> </button>
+    </div>
+
+    <!-- MAin JS -->
     <script src="app.js"></script>
+
 </body>
 
 </html>
