last changes for now!

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h3>Others:</h3>
         <a href="https://www.budgetair.com/en_us/blog/most-beautiful-places-on-earth" target="_blank" class="message-btn message">Check more-beautiful-places-on-earth</a>
         <li> <a href="https://www.harpersbazaar.com/culture/travel-dining/g7171/most-beautiful-places-in-the-world" class="message-btn message" target="_blank">See More</a> </li>
-        <button><a href="form.html" id="form " target="_blank ">Apply for a Form</a> </button>
+        <button><a href="form.html" id="form ">Apply for a Form</a> </button>
     </div>
 
     <!-- MAin JS -->
