--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
                     <input type="password" placeholder="Password" />
                     <input type="button" value="Sign up" />
                 </form>
-                <a class="flipbutton" id="registerButton" href="#">Login to my account →</a>
+                <a class="flipbutton" id="registerButton" href="./Index.html">Login to my account →</a>
             </div>
         </div>
     </div>
